# c-logger

./: .gitmodules  CMakeLists.txt  README.md
example/: main.c
include/: c_logger.h
src/: main.c
